Fix first functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "random": "c"
     }
 }
